# battleships

./: .dockerignore  .drone.yml  .gitignore  AGENTS.md  BACKEND_CHANGES_NEEDED.md  BDD_FEATURES_PLAN.md  CLAUDE.md  Code_Architecture.md  Dockerfile  Dockerfile.ci  GEMINI.md  Game_Play.md  Game_Rules.md  HATEOAS_Notes.md  HTMX_TEMPLATES_SUMMARY.md  KNOWN_TEST_ISSUES.md  LOBBY_LONG_POLLING_DOCUMENTATION.md  LONG_POLLING_MIGRATION_PLAN.md  My_Manual_Testing_Notes.md  Object_Decomposition.md  PHASE_2_NEXT_STEPS.md  PLAY_INSTRUCTIONS.md  README.md  README_GAME.md  SHIP_PLACEMENT_IMPLEMENTATION_PLAN.md  TDD_IMPLEMENTATION_PLAN.md  TDD_PLAN_UPDATE_SUMMARY.md  browser_test_output.txt  browser_test_output_phase_7.txt  demo.py  docker-compose.yml  drone-exec.sh  example_computer_player.py  main.py  play.py  pyproject.toml  pytest.ini  test_failure.txt  test_grid_changes.py  test_tui.py  (+1 more)
.opencode/: AGENT_CONVERSION.md  HOW_TO_USE_AGENTS.md  QUICK_REFERENCE.md  README.md
features/: login.feature  long_polling_updates.feature  multiplayer_lobby.feature  multiplayer_ship_placement.feature  ship_placement.feature  start_game_confirmation_page.feature  two_player_board_visibility.feature  two_player_edge_cases.feature  two_player_game_state.feature  two_player_gameplay.feature  two_player_hit_feedback.feature  two_player_network_handling.feature  two_player_real_time_updates.feature  two_player_round_progression.feature  two_player_round_resolution.feature  two_player_ship_sinking.feature  two_player_shot_selection.feature  two_player_shot_validation.feature  (+3 more)
game/: __init__.py  (+12 more)
(+196 files in other folders)
