[project]
name = "battleships"
version = "0.1.0"
description = "Battleships - A naval battle game implementation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi",
  "uvicorn",
  "jinja2",
  "python-multipart",
  "rich",
  "itsdangerous",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "pytest-asyncio"]

[dependency-groups]
dev = [
  "pytest>=8.4.1",
  "pytest-asyncio>=1.1.0",
  "pytest-cov>=6.2.1",
  "httpx>=0.27.0",
  "playwright>=1.48.0",
  "pytest-bdd>=8.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
