[project]
name = "battleships"
version = "0.1.0"
description = "Battleships - A naval battle game implementation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115.0",
  "starlette<0.47",
  "uvicorn>=0.32.0",
  "jinja2>=3.1.0",
  "python-multipart>=0.0.12",
  "rich>=13.0.0",
  "itsdangerous>=2.2.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "pytest-asyncio"]

[dependency-groups]
dev = [
  "pytest>=8.4.1",
  "pytest-asyncio>=1.1.0",
  "pytest-cov>=6.2.1",
  "httpx>=0.27.0",
  "playwright>=1.48.0",
  "pytest-bdd>=8.1.0",
  "bs4",
  "types-beautifulsoup4>=4.12.0.20250516",
]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
  "wip: Work in progress - feature not yet fully implemented"
]
# Skip WIP scenarios by default (run with -m wip to include them)
addopts = "-m 'not wip'"
